--- a/hci/userform.html
+++ b/hci/userform.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>API Interface</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 
 	<div class="container">
-
 	<div class="row">
 	<div class="col-12-lg">
 
 		<h1>API Interface</h1>
-		<div class="alert alert-warning" id="api-messages" role="alert">That email already exists!</div>
+		<div class="alert alert-warning" id="api-messages" role="alert"></div>
 
 		<ul class="nav nav-tabs" role="tablist">
 			<li class="active"><a href="#create" role="tab" data-toggle="tab">Create User</a></li>
+			<li><a href="#login" role="tab" data-toggle="tab">Login</a></li>
 		</ul>
 
 
@@ -29,6 +29,10 @@
 			<div class="form-group">
 			<label for="createEmail">Email</label>
 			<input type="text" class="form-control" name="email" id="createEmail" placeholder="Enter email">
+			</div>
+			<div class="form-group">
+			<label for="createPassword">Password</label>
+			<input type="password" class="form-control" name="password" id="createPassword" placeholder="Enter password">
 			</div>
 			<div class="form-group">
 			<label for="createUsername">Username</label>
@@ -49,6 +53,23 @@
 			<button type="submit" onclick="userCreate();" class="btn btn-success">Create</button>
 			</form>
 			</div>
+
+			<div class="tab-pane " id="login">
+			<form onsubmit="return false;">
+				<div class="form-group">
+				<label for="loginEmail">Email</label>
+				<input type="text" class="form-control" name="email" id="loginEmail" placeholder="Email">
+				</div>
+
+				<div class="form-group">
+				<label for="loginPassword">Password</label>
+				<input type="password" class="form-control" name="password" id="loginPassword" placeholder="Password">
+				</div>
+
+				<button type="submit" onclick="userLogin();" class="btn btn-success">Login</button>
+			</form>
+			</div>
+
 
 		</div>
 	</div>
@@ -77,20 +98,16 @@
 					}
 					return myXhr;
 				},
-				//Ajax events
 				beforeSend: function() {},
 				success: function() { alert ('yay'); },
 				error: function() {},
-				// Form data
 				data: formData,
-				//Options to tell jQuery not to process data or worry about content-type.
 				cache: false,
 				contentType: false,
 				processData: false
 			});
 
 	}
-
 	$(document).ready(function() {
 		//$('.alert').alert('close');
 
